# tesserae-api

./: .dockerignore  .gitignore  BOOTSTRAP.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  firmware_sources.yaml  pyproject.toml
.github/workflows/: ci.yml  geoip-refresh.yml  release.yml
data/: .gitkeep
scripts/: __init__.py  backup_db.sh  cull_test_data.sh  dump_stats.py  poll_github.py
src/tesserae_api/: __init__.py  blocklist.py  config.py  main.py
src/tesserae_api/cache/: __init__.py  firmware.py  github_releases.py
src/tesserae_api/routes/: firmware.py  heartbeat.py  version.py  widgets.py
src/tesserae_api/stats/: __init__.py  collector.py  geo.py
systemd/: tesserae-api-backup.service  tesserae-api-backup.timer  tesserae-api-cull.service  tesserae-api-cull.timer  tesserae-api-poll.service  tesserae-api-poll.timer
tests/: conftest.py  test_blocklist.py  test_firmware.py  test_firmware_cache.py  test_github_cache.py  test_heartbeat.py  test_stats_collector.py  test_version.py  test_widgets.py
